# InverminSystem

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile.backend  balanza-diagnostico.py  balanza_agent.env  balanza_agent.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: .env  .env.example  .env.prod  alembic.ini  check_env.py  test_conn.py
backend/alembic/: env.py
backend/alembic/versions/: 019e6b1b01da_change_cip_for_id_in_tests.py  02cf977f2f6b_pesajes_auditing.py  12dfbf9348b0_add_indexes.py  16b50b26e428_fix_parametros_precision.py  31534ef17722_add_offline_id_to_sessions.py  377bf1835f8a_fix_check_constraint_scale_weight.py  74dee8a5677c_add_triggers.py  77beea852a2c_change_fk_parametros_comerciales.py  78d0c0266868_add_auth.py  7ee8666ed7a6_parametros_comerciales_fk_to_provacop.py  88e8ea610813_add_traceability_to_settlement.py  91249cbb1ed0_change_col_name_to_riesgo_comercial.py  9da9d5c0e40f_initial_structure.py  9f009acaf520_add_sesion_documentos.py  d2fe1d166dc2_add_cascade_rules.py  d9d8698ec101_add_status_to_rec_registers.py  dcbc546c8e63_editable_values_liquidacionlote.py  fb89c75e12ae_add_check_constraints.py
backend/app/: main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: auth.py  base.py  enums.py  models.py
backend/app/routers/: auth.py  balanza.py  dashboard.py  entidades.py  laboratorio.py  muestreo.py  pruebas.py  usuarios.py
backend/scripts/: seed.py  seed_dev.py
frontend/: .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/src/: App.vue
(+90 files in other folders)
